[project]
name = "agent-social-media"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "crewai-tools",
    "crewai>=0.100.0",
    "flask>=2.0.0",
    "requests>=2.31.0",
    "pillow>=8.3.0",
    "evolutionapi>=0.0.9",
    "pilgram>=1.2.1",
    "imgurpython>=1.1.7",
    "google-generativeai>=0.8.4",
    "streamlit>=1.28.0",
    "onnxruntime>=1.14.1",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.6",
    "moviepy>=1.0.3",
    "urllib3>=2.3.0",
    "plotly>=6.0.0",
    "matplotlib>=3.10.1",
    "numpy>=1.24.0",
    "setuptools>=75.8.0",
    "pathlib>=1.0.1",
    "asgiref>=3.7.0",
    "facebook-sdk>=3.1.0",
    "python-magic>=0.4.27",
    "redis>=4.5.0",
    "rq>=1.15.0",
    "aioredis>=2.0.0",
    "opencv-python-headless>=4.8.0",
    "ffmpeg-python>=0.2.0",
    "opencv-python>=4.8.0",
    "aiohttp>=3.8.5",
    "asyncio>=3.4.3",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "sentry-sdk>=1.32.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "python-json-logger>=2.0.7",
    "structlog>=23.2.0",
    "mypy>=1.7.1",
    "types-requests>=2.31.0.10",
    "types-pillow>=10.1.0.2",
]
    
